[package]
name = "vulkan-device-filter-layer"
version = "0.1.0"
authors = ["Matt Coffin <mcoffin13@gmail.com>"]
edition = "2018"

[lib]
crate_type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
serde_yaml = "0.8"
dirs = "2.0"
env_logger = "0.7"
lazy_static = "1.4"
log4rs = "0.10"

[dependencies.log]
version = "0.4"
features = ["release_max_level_warn"]

[dependencies.regex]
version = "1.3"
default-features = false
features = ["std"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.vulkan-sys]
path = "../vulkan-sys"

[dependencies.libc-regex-sys]
path = "../libc-regex-sys"

[features]
default = []
no_log = []
